--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>第三次就上手</title
-   <link rel="icon" href="https://glitch.com/favicon.ico" />
+   <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.nz%2Fpin%2F706150416573291310%2F&psig=AOvVaw3k3dAcpPe8lyyL4rqCQOmz&ust=1677219536318000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJDx0-f_qv0CFQAAAAAdAAAAABAE" />
  </head>   
     
   
