--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p>Before the script...</p>
 
   <script>
-    alert( 'Hello, !' );
+    alert( 'Hello,shooky !' );
   </script>
 
   <p>...After the script.</p>
