--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>第三次就上手</title
-   <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fshooky&psig=AOvVaw3k3dAcpPe8lyyL4rqCQOmz&ust=1677219536318000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJDx0-f_qv0CFQAAAAAdAAAAABA_" />
+   <link rel="icon" href="https://www.google.com/search?q=shooky&tbm=isch&tbs=itp:clipart&hl=zh-TW&sa=X&ved=0CAIQpwVqFwoTCJDx0-f_qv0CFQAAAAAdAAAAABBH&biw=941&bih=934#imgrc=h2Aep9cgdrg5XM" />
  </head>   
     
   
