--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>第三次就上手</title
-   <link rel="icon" href="https://www.google.com/search?q=shooky&tbm=isch&tbs=itp:clipart&hl=zh-TW&sa=X&ved=0CAIQpwVqFwoTCJDx0-f_qv0CFQAAAAAdAAAAABBH&biw=941&bih=934#imgrc=h2Aep9cgdrg5XM" />
+   <link rel="icon" href="shooky.jpg" />
  </head>   
     
   
