--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>第三次就上手</title
-   <link rel="icon" href="shooky.jpg" />
+   <link rel="icon" href="下載.png" />
  </head>   
     
   
