--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>第三次就上手</title
    
  </head>   
-    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F771804454880554332%2F&psig=AOvVaw24QxnxQfXInEFtLJaIGYNU&ust=1677220717878000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCKjyjZuEq_0CFQAAAAAdAAAAABAX" />
-  
+  <link rel="icon" href="https://glitch.com/favicon.ico" />  
+   
 <body>
   <img src="下載.png" width="399" height="299">
   <p>Before the script...</p>
