--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
-<!DOCTYPE HTML>
-<html>
- <head>
-  <title>第三次就上手</title
-   
- </head>   
-  <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F771804454880554332%2F&psig=AOvVaw24QxnxQfXInEFtLJaIGYNU&ust=1677220717878000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCKjyjZuEq_0CFQAAAAAdAAAAABAX" />  
-   
-<body>
-  <img src="下載.png" width="399" height="399">
-  <p>Before the script...</p>
+<style>
+ #result1 {
+ 	background-image: url(https://p1.itc.cn/q_70/images01/20220103/78d2fdde68f447a7a22acec05e7b4212.jpeg);
+ 	background-color: red;
+ 	width: 500px;
+ 	height: 500px;
+ }
+ #result2 {
+ 	background-image: url(https://p1-tt.byteimg.com/origin/pgc-image/866c695680b84208ade16478cf3b9b73);
+ 	background-size: 300px 100px;
+ 	background-color: blue;
+ 	width: 300px;
+ 	height: 300px;
+ }
+</style>
 
-  <script>
-    alert( 'Hello,shooky !' );
-  </script>
+<div id='result1'>
+</div>
 
-  <p>...After the script.</p>
+<div id='result2'>
+</div>
 
-</body>
+<script>
+let message = "hello";
 
-</html>
+let x = 1;
+let y = 3.1415;
+let z = x < y;
+document.querySelector("#result1").innerText = x;
+document.querySelector("#result2").innerText = y;
+
+
+
+
+
+
+</script>
